force-app/main/default/objects/Service_Payment__c/Service_Payment__c.object-meta.xml
<CustomObject>
    <label>Service Payment</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Service Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>