force-app/main/default/objects/Service_Payment__c/fields/EMD_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Issued_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMD Issued Date</label>
    <type>Date</type>
</CustomField>