force-app/main/default/objects/Service_Payment__c/fields/EMD_Issued_IATA__c.field-meta.xml
<CustomField>
    <fullName>EMD_Issued_IATA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMD Issued IATA</label>
    <length>7</length>
    <type>Text</type>
</CustomField>