force-app/main/default/objects/Service_Payment__c/fields/EMD_Number__c.field-meta.xml
<CustomField>
    <fullName>EMD_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMD Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>