force-app/main/default/objects/Service_Payment__c/fields/Initiated_fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Initiated_fulfilment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QAC</description>
    <label>Initiated fulfilment?</label>
    <type>Checkbox</type>
</CustomField>