force-app/main/default/objects/Service_Payment__c/fields/Payment_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Confirmation Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>