force-app/main/default/objects/Service_Payment__c/fields/Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Due Date</label>
    <type>DateTime</type>
</CustomField>