force-app/main/default/objects/Service_Payment__c/fields/Payment_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Payment_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Remarks</label>
    <type>TextArea</type>
</CustomField>