force-app/main/default/objects/Service_Payment__c/fields/Payment_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Payment_Timestamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Timestamp</label>
    <type>DateTime</type>
</CustomField>