force-app/main/default/objects/Service_Payment__c/fields/QAC_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>QAC_Recipient_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>