force-app/main/default/objects/Service_Payment__c/fields/Quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>Quantity_UOM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quantity UOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>