force-app/main/default/objects/Service_Payment__c/fields/RFIC_code__c.field-meta.xml
<CustomField>
    <fullName>RFIC_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFIC code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>