force-app/main/default/objects/Service_Payment__c/fields/Total_Amount_with_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_Currency__c</fullName>
    <description>QAC</description>
    <formula>TEXT(Total_Amount__c)+&apos; &apos;+TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <type>Text</type>
</CustomField>