force-app/main/default/objects/Service_Payment__c/fields/Total_Payable_credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_credits__c</fullName>
    <description>QAC</description>
    <label>Total Payable credits</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>