force-app/main/default/objects/Service_Payment__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Payments</relationshipLabel>
    <relationshipName>Service_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>