force-app/main/default/objects/Service_Payment__c/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <label>Service Request</label>
</RecordType>