force-app/main/default/objects/Service_Payment__c/validationRules/QAC_PreventModifyFields.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_PreventModifyFields</fullName>
    <active>true</active>
    <description>To Prevent Modifying fields like Payment Status, EMD Number and Payment Confirmation Number</description>
    <errorConditionFormula>IF(
	AND(
		RecordType.Name = &apos;Service Request&apos;,
		ISPICKVAL(PRIORVALUE(Payment_Status__c),&quot;Paid&quot;),
		OR(
			ISCHANGED(Payment_Status__c),
			ISCHANGED(EMD_Number__c)
		)		
	),TRUE,FALSE 
)</errorConditionFormula>
    <errorMessage>Once Payment status is Paid, Payment status and EMD Number cannot be modified</errorMessage>
</ValidationRule>